Fix for excess spacing between section and footer when it proceeds a widget

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -15,16 +15,18 @@
   width: 100%;
   max-width: 100%;
   margin: 0;
-}
-  
-// Main content spacing (replace with corresponding template class)
-.wrapper {
   padding: 0;
 }
+
 
 // Widget overflow to allow 10S overlays to display correctly
 .widget.content {
   overflow: inherit;
+}
+
+
+.bk-zone {
+  margin-top: 0;
 }
 
 
@@ -33,6 +35,7 @@
     width: 90%;
     margin: auto;
 }
+
 
 .template-footer .wrapper {
     width: 90%;
@@ -63,7 +66,6 @@
   margin-left: auto;
   margin-right: auto;
   max-width: @container-width;
-//   width: 100%;
 }
 
 
